--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,8 @@
 name: RubyFreedomMod
 main: me.StevenLawson.TotalFreedomMod.TotalFreedomMod
-version: 2.1
+version: 2.2
 description: Plugin for RubyFreedom, an all-op server.
 softdepend: [BukkitTelnet, WorldEdit, Essentials, BarAPI]
-authors: [Madgeek1450, Prozza, Valencia_Orange]
+authors: [Madgeek1450, Prozza]
 
 # plugin.yml is no longer used to define commands.
