--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.Essentials-TF.jar=C:\\Users\\Sony\\Downloads\\Essentials-TF.jar
 file.reference.spigot-1.8.3-R0.1-SNAPSHOT-latest.jar=C:\\Users\\Sony\\Downloads\\spigot-1.8.3-R0.1-SNAPSHOT-latest.jar
 file.reference.spigot-1.8.7-R0.1-SNAPSHOT-latest.jar=C:\\Users\\Sony\\Downloads\\spigot-1.8.7-R0.1-SNAPSHOT-latest.jar
 file.reference.TF-WorldEdit.jar=C:\\Users\\Sony\\Downloads\\TF-WorldEdit.jar
+file.reference.votifier-2.0.jar=../votifier/target/votifier-2.0.jar
 file.reference.worldedit-bukkit-6.1.jar=C:\\Users\\Sony\\Downloads\\worldedit-bukkit-6.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -67,7 +68,8 @@ javac.classpath=\
     ${file.reference.spigot-1.8.7-R0.1-SNAPSHOT-latest.jar}:\
     ${file.reference.worldedit-bukkit-6.1.jar}:\
     ${file.reference.BarAPI.jar}:\
-    ${reference.BukkitTelnet.jar}
+    ${reference.BukkitTelnet.jar}:\
+    ${file.reference.votifier-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked -Xlint:deprecation
 javac.deprecation=false
