--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,6 @@ dist.jar=${dist.dir}/RubyFreedomMod.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.votifier-2.0.jar=../votifier/target/votifier-2.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -53,8 +52,8 @@ javac.classpath=\
     ${libs.TF-Essentials.classpath}:\
     ${libs.TF-WorldEdit.classpath}:\
     ${libs.BarAPI.classpath}:\
-    ${reference.BukkitTelnet.jar}:\
-    ${file.reference.votifier-2.0.jar}
+    ${libs.BukkitTelnet.classpath}:\
+    ${libs.Votifier.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked -Xlint:deprecation
 javac.deprecation=false
@@ -91,8 +90,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.BukkitTelnet=../BukkitTelnet
-reference.BukkitTelnet.jar=${project.BukkitTelnet}/dist/BukkitTelnet.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
