--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,22 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Netbeans excludes
+nbproject/private/
+dist/
+build/
+manifest.mf
 
-# Folder config file
-Desktop.ini
+# Eclipse excludes
+.project
+.classpath
+bin/
+.settings/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
+# OS generated files
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
 ._*
-
-# Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+ehthumbs.db
+Thumbs.db
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-/nbproject/private/
-/build/
-/dist/
+# TFM files
+build.properties
