--- a/src/config.yml
+++ b/src/config.yml
@@ -17,6 +17,8 @@ server:
   # Every word in the MOTD will be a different color unless prefixed by a color code
   colorful_motd: true
 
+  abusive_day: false
+
   # All players who show up as owner
   owners:
     - falceso
